<resources>
    <string name="app_name">Student Management Portal</string>
    <string name="action_settings">Settings</string>

    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_blob">blob</string>

    <string name="nav_student">STU-REC</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_exam">EXAM</string>

    <string name="title_activity_todo">todo</string>

    <!--

                        STUREC STRINGS

    -->
    <string name="search_hint">Enter student\'s name</string>
    <string name="long_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt cursus mi, ut tristique lacus mattis et. Vestibulum placerat interdum lobortis. Mauris in quam non purus fringilla fermentum sit amet in magna. Vestibulum porta vehicula nibh at pellentesque. Nullam tempor leo quis mollis tempus. Vivamus non volutpat arcu, vitae faucibus massa. Nam quis varius magna, sit amet pellentesque turpis. Vestibulum velit mi, mollis ut arcu eu, facilisis scelerisque metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi fermentum nisi at ligula aliquet, id consectetur est efficitur. Nullam accumsan vel justo eu finibus. Etiam euismod blandit elit, nec pulvinar urna ornare vitae.

Vestibulum sed velit est. Donec rhoncus, est in cursus convallis, neque risus varius purus, eu maximus arcu nulla vitae sapien. Sed ligula nisi, ornare eu lorem sed, dapibus laoreet dolor. Sed accumsan erat ante, eleifend pretium turpis malesuada eu. Proin scelerisque nisi tellus, eget efficitur tellus vestibulum eu. Mauris semper consequat dolor, sed hendrerit libero eleifend ut. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi eget congue dolor, in semper magna.

Quisque convallis, nisi at rutrum dictum, lorem nisi maximus sapien, luctus condimentum nunc purus id neque. Sed porta placerat iaculis. Etiam lacinia urna eleifend nulla interdum sollicitudin. Etiam nec tortor vulputate, facilisis mi egestas, tempus purus. In ligula libero, viverra in elit nec, fermentum tempor elit. Vivamus suscipit consequat leo, et auctor sapien venenatis sit amet. Pellentesque congue eleifend ex, vel aliquam magna rutrum quis. Donec mollis lobortis molestie. Phasellus ut lacinia dui, a varius metus. Vivamus pharetra felis mi, vitae pharetra elit sagittis eleifend. Ut bibendum justo erat, ac egestas nisi finibus in. Vestibulum a augue euismod, tincidunt diam in, placerat mi. Nam vitae mollis tellus. Praesent iaculis enim arcu, id dapibus nunc pharetra eu.
    </string>

    <string name="new_student_rec_heading">Add New Student</string>
    <string name="new_student_fn_hint">First name</string>
    <string name="new_student_ln_hint">Last name</string>
    <string name="new_student_dob_hint">Date of birth</string>
    <string name="new_student_gender_hint">Gender</string>
    <string name="new_student_address_hint">Address</string>
    <string name="new_student_program_hint">Program</string>
    <string name="new_student_image_hint">Add Photo</string>

    <string name="edit_student_title">Edit Student Record</string>
    <string name="edit_student_exam">Assign exams</string>


    <string name="name_placeholder">Aditya Singgih</string>
    <string name="sID_placeholder">16668906</string>
    <string name="program_placeholder">Master of ICT</string>

    <string name="update_button">Update</string>
    <string name="student_id_label">Student ID: </string>
    <string name="delete_student_label">Delete Student</string>

    <!--

                        TODO STRINGS

    -->

    <string name="task_name_hint">Task Name</string>
    <string name="task_due_hint">Due date</string>
    <string name="task_location_hint">Location</string>

    <string name="cancel_link">Cancel</string>
    <string name="add_link">Add</string>

    <string name="edit_todo_heading">Edit Task Details</string>
    <string name="checkbox_label">Completed ?</string>

    <string name="show_complete">Show Completed</string>
    <string name="update_but_label">Update</string>

    <!--

                        EXAM STRINGS

    -->
    <string name="exam_search">Enter exam name</string>
    <string name="upcoming_tab_text">Upcoming</string>
    <string name="all_tab_text">Past</string>
    <string name="title_activity_add__exam">Add_Exam</string>
    <string name="add_exam_heading">New Exam Details</string>

    <string name="exam_name_hint">Exam Name</string>
    <string name="exam_date_hint">Exam Date</string>
    <string name="exam_location_hint">Exam Location</string>
    <string name="exam_start_hint">Start Time</string>
    <string name="exam_duration_hint">Duration</string>


    <string name="cancel_label">Cancel</string>
    <string name="submit_label">Submit</string>
    <string name="title_activity_todo_edit">todo_edit</string>
    <string name="title_activity_add_new_student">Add_new_student</string>
    <string name="title_activity_sturec_edit">Sturec_edit</string>


</resources>
