<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Button
            android:id="@+id/newExam_close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cancel"
            android:backgroundTint="@color/colorHighlight" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_nav">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">


                <TextView
                    android:id="@+id/newExamTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_exam_heading"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    tools:text="@string/add_exam_heading" />

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/exam_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/exam_name_hint"
                        android:inputType="text" />



                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/exam_date_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/usernameLabel"
                        android:inputType="text" />



                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/exam_duration_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/usernameLabel"
                        android:inputType="text" />



                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/exam_location_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/exam_location_hint"
                        android:inputType="text" />


                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="40dp">

                    <Button
                        android:id="@+id/cancel_exam_form"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:background="@drawable/button_round"
                        android:textColor="@color/colorWhite"
                        android:layout_weight="1"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/cancel_label" />

                    <Button
                        android:id="@+id/submit_exam_form"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:background="@drawable/button_round"
                        android:textColor="@color/colorWhite"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="50dp"
                        android:text="@string/submit_label" />

                </LinearLayout>


            </LinearLayout>



        </ScrollView>


    </RelativeLayout>





</RelativeLayout>