<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorRealWhite"
    tools:context=".Login"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginTop="150dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@mipmap/freepik_agenda" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:hint="@string/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginTextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            
            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:hint="@string/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginTextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_round"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        tools:text="@string/login" />

</LinearLayout>