<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBox
        android:id="@+id/choose_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:buttonTint="@color/colorHighlight"
        />

    <ImageView
        android:id="@+id/student_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        />

    <LinearLayout
        android:id="@+id/student_details_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="false"
        >

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:textSize="23dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/student_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sID_placeholder"
                android:textStyle="bold"
                android:textSize="16dp"
                />

            <TextView
                android:id="@+id/dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/student_program"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_placeholder"
                android:textSize="16dp"
                />
        </LinearLayout>


    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="right"-->
        <!--android:descendantFocusability="blocksDescendants"-->
        <!--&gt;-->

        <!--<ImageButton-->
            <!--android:id="@+id/task_delete"-->
            <!--android:layout_width="15dp"-->
            <!--android:layout_height="15dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:focusable="false"-->
            <!--android:focusableInTouchMode="false"-->
            <!--android:background="@drawable/cancel" />-->

    <!--</LinearLayout>-->

</LinearLayout>