<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:focusableInTouchMode="true"
android:descendantFocusability="beforeDescendants"
android:background="@color/colorRealWhite"
xmlns:app="http://schemas.android.com/apk/res-auto">


<RelativeLayout
    android:id="@+id/top_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right" >

    <Button
        android:id="@+id/newStudent_close_but"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cancel"
        android:backgroundTint="@color/default_text_col" />


</RelativeLayout>

<RelativeLayout
    android:id="@+id/main_content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/top_nav">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">


            <TextView
                android:id="@+id/newStudentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_student_rec_heading"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:text="@string/new_student_rec_heading" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_fname_input_layout"
                android:hint="@string/new_student_fn_hint"
                android:theme="@style/LoginTextInputLayoutStyle"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/student_fname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_lname_input_layout"
                android:hint="@string/new_student_ln_hint"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:theme="@style/LoginTextInputLayoutStyle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/student_lname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_address_input_layout"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_student_address_hint"
                android:theme="@style/LoginTextInputLayoutStyle"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/student_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_dob_input_layout"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_student_dob_hint"
                android:theme="@style/LoginTextInputLayoutStyle"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/student_dob_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:clickable="true"
                    android:focusable="false"
                    />


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/gender_dropdown_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginRight="200dp"
                    android:layout_weight="1"
                    android:background="@drawable/customborder"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/gender_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/new_student_gender_hint"
                        android:textSize="16dp" />

                    <Spinner
                        android:id="@+id/gender_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>



                <!--<LinearLayout-->
                    <!--android:layout_marginTop="20dp"-->
                    <!--android:id="@+id/dropdown_container"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@drawable/customborder"-->
                    <!--android:orientation="vertical">-->

                    <!--<TextView-->
                        <!--android:id="@+id/dropdown_label"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textSize="16dp"-->
                        <!--android:text="@string/exam_duration_hint"-->
                        <!--/>-->

                    <!--<Spinner-->
                        <!--android:hint="@string/exam_duration_hint"-->
                        <!--android:id="@+id/exam_duration"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1" />-->

                <!--</LinearLayout>-->

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/prog_dropdown_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginRight="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/customborder"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/program_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/new_student_program_hint"
                        android:textSize="16dp" />

                    <Spinner
                        android:id="@+id/program_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/photo_container"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/student_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:clickable="true"
                    android:background="@drawable/profpic"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit_new_student_form"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:background="@drawable/button_round"
                    android:text="@string/submit_label"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>



        </LinearLayout>



    </ScrollView>


</RelativeLayout>





</RelativeLayout>